crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/types/abstractKeyword/abstractKeyword.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\conformance\\types\\abstractKeyword\\abstractKeyword.ts"
---

# Input

```js
abstract interface I {}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1,2 @@
-abstract interface I {}
+abstract;
+interface I {}
```

# Output

```js
abstract;
interface I {}
```


# Errors
```
abstractKeyword.ts:1:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ abstractKeyword.ts:1:10
    │
  1 │ abstract interface I {}
    │          ^^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ abstractKeyword.ts:1:1
    │
  1 │ abstract interface I {}
    │ ^^^^^^^^^^^^^^^^^^
  

```


